# Stoneball

./: .gitignore  README.md
MazeGenerator/: AICommon.cpp  AICommon.h  AStar.h  AStar.hpp  BackwardSearchTest.cpp  BackwardTest.cpp  Breadthfirst.cpp  Breadthfirst.h  BreadthfirstTest.cpp  CMakeLists.txt  DatasetGenerator.cpp  Generator.cpp  Generator.h  Level21Test.cpp  Level2xSolutionGenerators.cpp  Maze.cpp  Maze.h  MazeStar.cpp  MazeStar.h  MazeStarV2.h  MazeStarV3.h  TestUtil.cpp  TestUtil.h  main.cpp
Server/: CMakeLists.txt  FontFactory.cpp  ServerApplication.cpp  ServerApplication.h  compile  compile_ninja  main.cpp  recompile  recompile_ninja  runDistccCmake
cpp/: BitmapIds.h  BuildNumber.h  CMakeLists.txt  GameMap.cpp  GameMap.h  GameObjectDescriptor.cpp  GameObjectDescriptor.h  Global.cpp  Global.h  Island.cpp  Island.h  MediaData.cpp  MediaData.h  MoveHistory.cpp  MoveHistory.h  Screen.cpp  Screen.h  SoundEffect.cpp  SoundEffect.h  StaticObjects.cpp  StaticObjects.h  TouchEventHandler.cpp  TouchEventHandler.h  TouchEventListener.h  Visitor.h  VisitorSubject.h  android.h  stoneball.c  stoneball.h
cpp/AI/: AStar.cpp  AStar.h  Maze.cpp  Maze.h
cpp/Application/: Application.cpp  Application.h  ApplicationExports.cpp  ApplicationExports.h  UDPMessageHandler.cpp
cpp/Application/Menu/: AboutMenu.cpp  AboutMenu.h  AnimatedKnightsForMenu.cpp  AnimatedKnightsForMenu.h  ApplicationMenu.cpp  ApplicationMenu.h  LevelsMenu.cpp  LevelsMenu.h  MainMenu.cpp  MainMenu.h  MultiplayerCreateGameMenu.cpp  MultiplayerCreateGameMenu.h  MultiplayerFindGameMenu.cpp  MultiplayerFindGameMenu.h  MultiplayerMenu.cpp  MultiplayerMenu.h  MultiplayerOneDeviceGameParameters.cpp  MultiplayerOneDeviceGameParameters.h  OnlineMenu.cpp  OnlineMenu.h  SettingsMenu.cpp  SettingsMenu.h
cpp/Builders/: MenuBuilder.cpp  MenuBuilder.h
cpp/Collision/: Collision.cpp  Collision.h  CollisionData.h  GameObjectCollider.cpp  GameObjectCollider.h
cpp/Environments/: Environment.cpp  Environment.h
cpp/Factories/: BlueTriangleFactory.cpp  BlueTriangleFactory.h  FontFactory.cpp  FontFactory.h  GameFactory.cpp  GameFactory.h  GameFactoryServerSide.cpp  KnightFactory.cpp  KnightFactory.h  LevelFactory.cpp  LevelFactory.h  TranslatorFactory.cpp  TranslatorFactory.h  UDPConnectionFactory.cpp  UDPConnectionFactory.h  UDPMessageFactory.cpp  UDPMessageFactory.h  UDPMessageQueueFactory.cpp  UDPMessageQueueFactory.h  UDPServerFactory.cpp  UDPServerFactory.h
cpp/Game/: Game.cpp  Game.h  MultiplayerGame.cpp  MultiplayerGame.h  MultiplayerGameServerSide.cpp  MultiplayerGameServerSide.h  SingleplayerGame.cpp  SingleplayerGame.h
cpp/GameObjects/: BlueTriangle.cpp  BlueTriangle.h  BouncingStones.cpp  BouncingStones.h  Button.cpp  Button.h  Card.cpp  Card.h  CardPull.cpp  CardPull.h  CardPushPlayer.cpp  CardPushPlayer.h  CardTeleport.cpp  CardTeleport.h  DeckOfCards.cpp  DeckOfCards.h  EmoteFigure.cpp  EmoteFigure.h  EmotesBubble.cpp  EmotesBubble.h  Fireworks.cpp  Fireworks.h  GameObject.cpp  GameObject.h  Knight.cpp  Knight.h  Listbox1.cpp  Listbox1.h  MatchResults.cpp  MatchResults.h  Messagebox1.cpp  Messagebox1.h  MessageboxTermsOfUse.cpp  MessageboxTermsOfUse.h  MessageboxYesNo.cpp  MessageboxYesNo.h  Particle.cpp  Particle.h  Questionmark.cpp  Questionmark.h  (+10 more)
cpp/Interfaces/: AnyCastItemInterface.h  FontInterface.h  GameInterface.h  GameObjectInterface.h  MemCacheInterface.h  MenuInterface.h  RollingStoneInterface.h  SerializeInterface.h  TranslateInterface.h  UDPConnectionInterface.h  UDPMessageInterface.h  UDPMessageQueueInterface.h  UDPServerInterface.h
cpp/Localization/: Translator.cpp  Translator.h
cpp/Observers/: MenuTouchEvent.cpp  MenuTouchEvent.h  Observer.h  ObserverSubject.h  ObserverSubjectVictoryEvent.h  ObserverSubjectVictoryEventVisitor.h  ObserverTouchEvent.h  ObserverTouchEventSubject.h  ObserverVictoryEvent.h
cpp/States/: State.h  StateSubject.h
cpp/States/Knight/: StateKnightIdle.cpp  (+5 more)
cpp/Strategies/: HeroStraightWalkStrategy.cpp  HeroStraightWalkStrategy.h  HeroWalkStrategy.cpp  HeroWalkStrategy.h  Strategy.cpp  Strategy.h
cpp/Tilesets/: Level1.cpp  Level1.h  Level10.cpp  Level10.h  Level11.cpp  Level11.h  Level12.cpp  Level12.h  Level13.cpp  Level13.h  Level14.cpp  Level14.h  Level15.cpp  Level15.h  Level16.cpp  Level16.h  Level17.cpp  Level17.h  Level18.cpp  Level18.h  Level19.cpp  Level19.h  Level2.cpp  Level2.h  Level20.cpp  Level20.h  Level21.cpp  Level21.h  Level22.cpp  Level22.h  Level23.cpp  Level23.h  Level24.cpp  Level24.h  Level25.cpp  Level25.h  Level26.cpp  Level26.h  Level27.cpp  Level27.h  (+59 more)
cpp/UDP/: UDP.cpp  UDP.h  UDPConnection.cpp  UDPConnection.h  UDPConnectionRequest.cpp  UDPConnectionRequest.h  UDPConnection_win.cpp  UDPLobbyData.cpp  UDPLobbyData.h  UDPLobbyRejected.h  UDPLobbyRequest.cpp  UDPLobbyRequest.h  UDPMessageData.cpp  UDPMessageData.h  UDPMessageQueue.cpp  UDPMessageQueue.h  UDPPackageCreator.cpp  UDPPackageCreator.h  UDPReconnectionRequest.cpp  UDPReconnectionRequest.h  UDPRoomListAnswer.cpp  UDPRoomListAnswer.h  UDPRoomListRequest.cpp  UDPRoomListRequest.h  UDPServer.cpp  UDPServer.h  UDPServerDeltaSnapshot.cpp  UDPServerDeltaSnapshot.h  UDPServerSnapshot.cpp  UDPServerSnapshot.h  UDPServer_win.cpp  UDPSimpleMessage.cpp  UDPSimpleMessage.h  UDPUserCommands.cpp  UDPUserCommands.h  UDP_win.cpp  UserInput.h
cpp/Util/: Algorithms.h  AndroidFont.cpp  AndroidFont.h  Bitmap565.cpp  Bitmap565.h  ButtonEventListener.cpp  ButtonEventListener.h  ClientTimeSyncer.cpp  ClientTimeSyncer.h  CommonUtil.cpp  CommonUtil.h  Defines.h  EnumClassOp.h  Font.cpp  Font.h  IdGenerator.cpp  IdGenerator.h  Math.cpp  Math_.h  MemCache.cpp  MemCache.h  Memory.cpp  Memory.h  NTPClient.cpp  NTPClient.h  NameGenerator.cpp  NameGenerator.h  Position.h  Rect.cpp  Rect.h  Serialize.cpp  Serialize.h  Size.h  StringUtil.cpp  StringUtil.h  Util.pro  UtilWinDefs.cpp  UtilWinDefs.h  Vector.h  Zlib.cpp  (+3 more)
cpp/Worlds/: MultiplayerWorld.cpp  MultiplayerWorld.h  SingleplayerWorld.cpp  SingleplayerWorld.h  SnapshotSyncer.cpp  SnapshotSyncer.h  World.h  WorldTouchEvent.cpp  WorldTouchEvent.h
(+52 files in other folders)
